# agent-core

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  ESBY_MIGRATION.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  bootstrap.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  QUICKSTART.md  ROADMAP.md
