[project]
name = "agent-core-workspace"
version = "0.0.1"
description = "Workspace root for agent-core, dcos-agent, ikb-agent."
requires-python = ">=3.11"

# Pull every workspace member in as a dep so a bare `uv sync` from the
# repo root installs all three packages + their console scripts (dcos /
# ikb) in editable mode. Without this, `uv sync` resolves the workspace
# but installs nothing into the venv — `uv run dcos` then errors with
# "Failed to spawn: dcos / No such file or directory".
#
# `agent-core[dev]` pulls pytest / ruff / mypy / httpx so a bare
# `uv sync` from the repo root gives developers everything they need
# (including the test runner) without remembering to pass --all-extras.
dependencies = [
    "agent-core[dev]",
    "dcos-agent",
    "ikb-agent",
]

[tool.uv.sources]
agent-core = { workspace = true }
dcos-agent = { workspace = true }
ikb-agent = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/agent-core",
    "packages/dcos-agent",
    "packages/ikb-agent",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
